Created the WCF service for the BaseStation that will run on the PC with the base station arduino connected to it.

--- a/FowieMow/FowieMow.csproj
+++ b/FowieMow/FowieMow.csproj
@@ -50,7 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BrainStem.cs" />
+    <Compile Include="ArduinoCommunicator.cs" />
     <Compile Include="DataLogging.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
